<resources>
    <string name="app_name">MyRPGCharacter</string>
    <string name="character_registration">Character Registration</string>
    <string name="character_name">Character Name</string>
    <string name="race">Race</string>
    <string name="strength">Strength</string>
    <string name="dexterity">Dexterity</string>
    <string name="constitution">Constitution</string>
    <string name="wisdom">Wisdom</string>
    <string name="intelligence">Intelligence</string>
    <string name="charisma">Charisma</string>
    <string name="notes">Notes</string>
    <string name="translate">Traduzir Sentenças</string>
    <string name="classe">Classe</string>
    <string name="salvar_personagem">Salvar Personagem</string>
    <string name="deletar_personagens">Deletar Personagens</string>
    <string name="visualizar_personagens">Visualizar Personagens</string>
    <string name="cadastrar_personagem">Cadastrar Personagem</string>
    <string name="personagem_rpg">Personagem RPG</string>
    <string name="voltar_para_inicial">Voltar para a Tela Inicial</string>
    <string name="voltar_para_personagens">Voltar para a Tela de Personagens</string>
    <string name="characters_list">Lista de Personagens</string>
    <string name="editar_personagem">Editar Personagem</string>
    <string name="select_language">Select Language</string>
    <string name="traduzir_sentencas">Traduzir Sentenças</string>
    <string name="enter_text_to_translate">Enter text to translate</string>
    <string name="translate_only">Traduzir</string>
    <string name="translation_will_appear_here">Translation will appear here</string>
    <string name="character_image">Character Image</string>
    <string name="selecionar_imagem">Selecionar Imagem</string>
    <string name="view_character_details">Visualizar Informações</string>
    <string name="back_to_image">Volta para Imagem</string>
    <string name="life_value">Life Value</string>
    <string name="armor_class">Armor Class</string>
    <string name="mana_value">Mana Value</string>
    <string name="value">00</string>
    <string name="maxLife">Max life</string>
    <string name="lvl">Level</string>
    <string name="maxMana">Max Mana</string>
    <string name="max_mana">Max Mana</string>
    <string name="adicionar_habilidade">Adicionar Habilidade</string>
    <string name="expandir_colapsar_habilidades">Expandir/Colapsar Habilidades</string>
    <string name="habilidades">Habilidades</string>
</resources>