<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f9f5e3"
    android:padding="16dp">

    <!-- Título -->
    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/traduzir_sentencas"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed"
        android:textColor="#3c2f2f"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingBottom="10dp" />

    <!-- Language Selection Dropdown -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/languages_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/select_language"
        app:layout_constraintTop_toBottomOf="@id/title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <AutoCompleteTextView
            android:id="@+id/languages"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/custom_edit_text"
            android:textColor="#3c2f2f"
            android:padding="10dp"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input field for text to translate -->
    <EditText
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_text_to_translate"
        android:padding="10dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/languages_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Button to initiate the translation -->
    <Button
        android:id="@+id/button_translate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate_only"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/inputText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:backgroundTint="#3c2f2f" />

    <!-- TextView to display the translated text -->
    <TextView
        android:id="@+id/translatedTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/translation_will_appear_here"
        android:padding="10dp"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/button_translate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Botão de Retorno -->
    <Button
        android:id="@+id/button_return"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/voltar_para_inicial"
        app:layout_constraintTop_toBottomOf="@id/translatedTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:backgroundTint="#3c2f2f"
        android:textColor="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>
